Make fuel examples a tag
For modpacks that remove fuels moslty