@@ -3,13 +3,12 @@ package slimeknights.tconstruct.plugin.jei.melting;
 import com.mojang.datafixers.util.Pair;
 import mezz.jei.api.recipe.vanilla.IJeiFuelingRecipe;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraftforge.common.util.Lazy;
 import net.minecraftforge.fluids.FluidStack;
+import slimeknights.tconstruct.common.TinkerTags;
 import slimeknights.tconstruct.library.recipe.fuel.MeltingFuel;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -24,10 +23,10 @@ public class MeltingFuelHandler {
   /** List of all solid fuels from the JEI recipe manager. */
   private static List<ItemStack> allSolidFuels = List.of();
 
+  /** Ingredient showing examples of fuels */
+  private static final Ingredient FUEL_EXAMPLES = Ingredient.of(TinkerTags.Items.FUEL_EXAMPLES);
   /** List of solid fuels for solid melting examples */
-  public static final Lazy<List<ItemStack>> SOLID_FUELS = Lazy.of(() -> Arrays.asList(
-    new ItemStack(Items.COAL), new ItemStack(Items.CHARCOAL), new ItemStack(Blocks.OAK_LOG), new ItemStack(Blocks.OAK_PLANKS), new ItemStack(Items.BLAZE_ROD)));
-
+  public static final Lazy<List<ItemStack>> SOLID_FUELS = Lazy.of(() -> List.of(FUEL_EXAMPLES.getItems()));
 
   /**
    * Updates the melting cache, called on JEI load.
